--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,14 +18,21 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: '20'
           registry-url: 'https://registry.npmjs.org'
 
       # Bước 3: Cài đặt dependencies
       - name: Install Dependencies
         run: npm install
 
-      # Bước 4: Publish gói npm (nếu các bước trước thành công)
+      # Bước 4: run update version
+      - name: Run semantic-release
+        env:
+          GITHUB_TOKEN: ${{ secrets.SEMANTIC_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npx semantic-release
+
+      # Bước 5: Publish gói npm (nếu các bước trước thành công)
       - name: Publish Package to npm
         run: npm publish --access public
         env:
