--- a/.releaserc
+++ b/.releaserc
@@ -1,4 +1,5 @@
 {
+  "repositoryUrl": "https://github.com/peapaa/test-it.git",
   "branches": [
     "master"
   ],
@@ -6,6 +7,13 @@
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     "@semantic-release/npm",
-    "@semantic-release/github"
+    [
+      "@semantic-release/github",
+      {
+        "labels": [
+          "semantic-release"
+        ]
+      }
+    ]
   ]
 }
