--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "@thiendd123/test-it",
   "version": "0.0.1",
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/peapaa/test-it.git"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
