update file release

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,7 +25,14 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
-      # Bước 4: Publish gói npm (nếu các bước trước thành công)
+      # Bước 4: Chạy semantic-release
+      - name: Run semantic-release
+        env:
+          GITHUB_TOKEN: ${{ secrets.SEMANTIC_TOKEN }} # PAT có quyền push/tag/release
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }} # Token cho npm publish
+        run: npx semantic-release
+
+      # Bước 5: Publish gói npm (nếu các bước trước thành công)
       - name: Publish Package to npm
         run: npm publish --access public
         env:
