--- a/.releaserc
+++ b/.releaserc
@@ -1,5 +1,4 @@
 {
-  "repositoryUrl": "https://github.com/peapaa/test-it.git",
   "branches": [
     "master"
   ],
@@ -7,12 +6,15 @@
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     "@semantic-release/npm",
+    "@semantic-release/github",
     [
-      "@semantic-release/github",
+      "@semantic-release/git",
       {
-        "labels": [
-          "semantic-release"
-        ]
+        "assets": [
+          "package.json",
+          "CHANGELOG.md"
+        ],
+        "message": "chore(release): set version to ${nextRelease.version} [skip ci]"
       }
     ]
   ]
